# CSGO-knives-flipper

./: .gitignore
backend/: CustomLogger.py  Knife.py  TODO.txt  baza.mwb  baza.mwb.bak  baza.sql  buy_order_maxer.py  common.py  db_operations.py  knife_names.txt  main.py  playwright_scraper.py  requirements.txt  selenium_scraper.py
backend/knives-api/: README.md  main.py  model.py  pyproject.toml  requirements.txt
backend/knives-api/knives/: bruno.json  get all knives.bru
backend/knives-api/knives_api/: main.py  model.py
backend/scraper/: CustomLogger.py  Knife.py  baza.mwb  baza.mwb.bak  baza.sql  buy_order_maxer.py  common.py  db_operations.py  main.py  playwright_scraper.py  requirements.txt  selenium_scraper.py
backend/scraper/DB/MySQL/: baza_mysql.sql  config_mysql.py  db_operations_mysql.py
backend/scraper/DB/Postgres/: baza_postgres.sql  config_postgres.py  db_operations_postgres.py
cs-knives-fliiper-front/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.json
cs-knives-fliiper-front/src/views/: HomeView.vue
frontend/init/: package-lock.json  package.json
frontend/init/src/: App.css  App.tsx
frontend/init/src/components/: table.css  table.tsx
